# PyIMRPhenomD

./: README  pyproject.toml  ruff.toml  setup.py
PyIMRPhenomD/: IMRPhenomD.py  IMRPhenomD_const.py  IMRPhenomD_deriv_internals.py  IMRPhenomD_fring_helper.py  IMRPhenomD_internals.py  __init__.py  demo_IMRPhenomD.py
